[tool.poetry]
name = "pytest-antilru"
version = "2.0.0"
description = "Bust functools.lru_cache when running pytest to avoid test pollution"
license = "MIT"
authors = ["John Nguyen <ipwnponies@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ipwnponies/pytest-antilru"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = [
    "CHANGELOG.md"
]

[tool.poetry.dependencies]
python = ">=3.8"
pytest = [
    # python 3.8 and 3.9 still have legacy support for pytest 3-6
    {version = ">=7", python = ">=3.10"}
]

[tool.poetry.group.dev.dependencies]
black = {version = "*", python = "^3.10"}
ipython = {version = "*", python = "^3.10"}
pudb = {version = "*", python = "^3.10"}
tox = {version = "*", python = "^3.10"}
pre-commit = {version = "*", python = "^3.10"}

[tool.poetry.plugins."pytest11"]
"antilru" = "pytest_antilru.main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=120
target-version = ['py39']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | venv
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
