[project]
name = "pytest-antilru"
version = "2.0.0"
description = "Bust functools.lru_cache when running pytest to avoid test pollution"
license = "MIT"
authors = [{name = "John Nguyen", email = "ipwnponies@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pytest>=3,<9; python_version < '3.10'",
    # python 3.10+ only supports newer pytest releases
    "pytest>=7,<9; python_version >= '3.10'",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Repository = "https://github.com/ipwnponies/pytest-antilru"

[project.entry-points.pytest11]
antilru = "pytest_antilru.main"

[dependency-groups]
dev = [
    "black; python_version == '3.14'",
    "ipython; python_version == '3.14'",
    "pudb; python_version == '3.14'",
    "tox; python_version == '3.14'",
    "pre-commit; python_version == '3.14'",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pytest_antilru*"]

[tool.black]
line-length=120
target-version = ['py39']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | venv
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
