[project]
name = "pytest-antilru"
version = "2.0.0"
description = "Bust functools.lru_cache when running pytest to avoid test pollution"
license = "MIT"
authors = [{name = "John Nguyen", email = "ipwnponies@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Match pytest's python-version compatibility matrix by interpreter series.
    "pytest>=3,<9; python_version == '3.9'",
    "pytest>=3,<10; python_version >= '3.10'",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
Repository = "https://github.com/ipwnponies/pytest-antilru"

[project.entry-points.pytest11]
antilru = "pytest_antilru.main"

[dependency-groups]
dev = [
    "black",
    "ipython",
    "pudb",
    "tox",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pytest_antilru*"]

[tool.black]
line-length=120
target-version = ['py39']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | venv
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
